--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -42,7 +42,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <h5>Prep Time:</h5>
-                            </div>¸git
+                            </div>
                             <div class="col-md-3">
                                 <p th:text="${(recipe.prepTime) +  '  Min'}">30 min</p>
                             </div>
@@ -78,7 +78,7 @@
                                 <h5>URL:</h5>
                             </div>
                             <div class="col-md-3">
-                                <p><a href="#" th:href="${recipe.url}" >View Original</a></p>
+                                <p><a href="#" th:href="@{recipe.url}" >View Original</a></p>
                             </div>
                         </div>
                     </div>
